autoscheduler/frontend/src/components/SchedulingPage/SchedulingPage.css
.page-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow-y: auto;
}

.left-container {
    flex-grow: 1;
    flex-basis: 0;
    display: flex;
    flex-direction: column;
}

.schedule-container {
    flex-grow: 2;
    flex-basis: 0;
}

.middle-column {
    display: flex;
    flex-direction: column;
    flex-basis: 0;
    flex-grow: 1;
    justify-content: space-between;
    margin-top: 8px;
    margin-left: 16px;
    margin-right: 16px;
    margin-bottom: 16px;
    max-width: 550px;
}

.course-card-column-container {
    margin: 4px;
    padding: 4px;
    min-width: 400px;
    flex-basis: 0;
    flex-grow: 1;
}

@media screen and (min-width: 1024px) {
    .page-container, .left-container {
        flex-direction: row;
    }
    .page-container {
        overflow-y: hidden;
    }
    .middle-column {
        margin-left: 8px;
        margin-right: 8px;
    }
}

